[gd_scene load_steps=72 format=1]

[ext_resource path="res://scripts/player_script.gd" type="Script" id=1]
[ext_resource path="res://gfx/keen/1.png" type="Texture" id=2]
[ext_resource path="res://gfx/keen/10.png" type="Texture" id=3]
[ext_resource path="res://gfx/keen/11.png" type="Texture" id=4]
[ext_resource path="res://gfx/keen/12.png" type="Texture" id=5]
[ext_resource path="res://gfx/keen/13.png" type="Texture" id=6]
[ext_resource path="res://gfx/keen/14.png" type="Texture" id=7]
[ext_resource path="res://gfx/keen/15.png" type="Texture" id=8]
[ext_resource path="res://gfx/keen/16.png" type="Texture" id=9]
[ext_resource path="res://gfx/keen/17.png" type="Texture" id=10]
[ext_resource path="res://gfx/keen/18.png" type="Texture" id=11]
[ext_resource path="res://gfx/keen/19.png" type="Texture" id=12]
[ext_resource path="res://gfx/keen/2.png" type="Texture" id=13]
[ext_resource path="res://gfx/keen/20.png" type="Texture" id=14]
[ext_resource path="res://gfx/keen/21.png" type="Texture" id=15]
[ext_resource path="res://gfx/keen/22.png" type="Texture" id=16]
[ext_resource path="res://gfx/keen/23.png" type="Texture" id=17]
[ext_resource path="res://gfx/keen/24.png" type="Texture" id=18]
[ext_resource path="res://gfx/keen/25.png" type="Texture" id=19]
[ext_resource path="res://gfx/keen/26.png" type="Texture" id=20]
[ext_resource path="res://gfx/keen/27.png" type="Texture" id=21]
[ext_resource path="res://gfx/keen/28.png" type="Texture" id=22]
[ext_resource path="res://gfx/keen/29.png" type="Texture" id=23]
[ext_resource path="res://gfx/keen/3.png" type="Texture" id=24]
[ext_resource path="res://gfx/keen/30.png" type="Texture" id=25]
[ext_resource path="res://gfx/keen/31.png" type="Texture" id=26]
[ext_resource path="res://gfx/keen/32.png" type="Texture" id=27]
[ext_resource path="res://gfx/keen/33.png" type="Texture" id=28]
[ext_resource path="res://gfx/keen/34.png" type="Texture" id=29]
[ext_resource path="res://gfx/keen/35.png" type="Texture" id=30]
[ext_resource path="res://gfx/keen/36.png" type="Texture" id=31]
[ext_resource path="res://gfx/keen/37.png" type="Texture" id=32]
[ext_resource path="res://gfx/keen/38.png" type="Texture" id=33]
[ext_resource path="res://gfx/keen/39.png" type="Texture" id=34]
[ext_resource path="res://gfx/keen/4.png" type="Texture" id=35]
[ext_resource path="res://gfx/keen/40.png" type="Texture" id=36]
[ext_resource path="res://gfx/keen/41.png" type="Texture" id=37]
[ext_resource path="res://gfx/keen/42.png" type="Texture" id=38]
[ext_resource path="res://gfx/keen/43.png" type="Texture" id=39]
[ext_resource path="res://gfx/keen/5.png" type="Texture" id=40]
[ext_resource path="res://gfx/keen/6.png" type="Texture" id=41]
[ext_resource path="res://gfx/keen/7.png" type="Texture" id=42]
[ext_resource path="res://gfx/keen/8.png" type="Texture" id=43]
[ext_resource path="res://gfx/keen/9.png" type="Texture" id=44]
[ext_resource path="res://gfx/keen/44.png" type="Texture" id=45]
[ext_resource path="res://gfx/lighting/player_mask.png" type="Texture" id=46]
[ext_resource path="res://scenes/fade_screen.tscn" type="PackedScene" id=47]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4.82492, 15.9242 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 5.5, 0.5 )

[sub_resource type="SpriteFrames" id=3]

animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="Animation" id=4]

resource/name = "climbing"
length = 0.6
loop = false
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.15, 0.3, 0.45 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ 6, 7, 8, 9 ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.6 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"post_climb" } ] }

[sub_resource type="Animation" id=5]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.6, 0.8 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":1, "values":[ 17, 18, 19, 20, 18 ] }

[sub_resource type="Animation" id=6]

resource/name = "enter_door"
length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3, 0.6, 0.9 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ 34, 35, 36, 37 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 0, -24 ) ] }
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 1.2 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"enter_door" } ] }

[sub_resource type="Animation" id=7]

length = 5.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 3, 4 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ 41, 40, 41 ] }

[sub_resource type="Animation" id=8]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 5 ] }

[sub_resource type="Animation" id=9]

length = 45.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 10, 11, 15, 16, 25, 28.1, 29, 39, 42 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 0, 1, 0, 2, 0, 42, 10, 0, 2, 0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 0, 0 ) ] }

[sub_resource type="Animation" id=10]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 39 ] }

[sub_resource type="Animation" id=11]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 13 ] }

[sub_resource type="Animation" id=12]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 12 ] }

[sub_resource type="Animation" id=13]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 14 ] }

[sub_resource type="Animation" id=14]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.6 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ 11, 22, 33, 38 ] }

[sub_resource type="Animation" id=15]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 21 ] }

[sub_resource type="Animation" id=16]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 28 ] }

[sub_resource type="Animation" id=17]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 26 ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.2, 0.5 ), "transitions":FloatArray( 1, 1 ), "values":[ { "args":[  ], "method":"fire_shot" }, { "args":[  ], "method":"post_shot" } ] }

[sub_resource type="Animation" id=18]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 29 ] }

[sub_resource type="Animation" id=19]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 25 ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.2, 0.5 ), "transitions":FloatArray( 1, 1 ), "values":[ { "args":[  ], "method":"fire_shot" }, { "args":[  ], "method":"post_shot" } ] }

[sub_resource type="Animation" id=20]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 23 ] }

[sub_resource type="Animation" id=21]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 27 ] }

[sub_resource type="Animation" id=22]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 24 ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"post_shot" } ] }

[sub_resource type="Animation" id=23]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ 14, 15, 16 ] }

[sub_resource type="RectangleShape2D" id=24]

custom_solver_bias = 0.0
extents = Vector2( 5, 0.5 )

[node name="Keen" type="KinematicBody2D"]

z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0.1 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, -15 )
shapes/1/trigger = false
collision/layers = 3
collision/mask = 3
collision/margin = 0.08
script/script = ExtResource( 1 )
init_face_right = true

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = 0
limit/right = 10000000
limit/bottom = 10000000
limit/smoothed = false
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 20.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

frames = SubResource( 3 )
animation = "default"
frame = 34

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/climbing = SubResource( 4 )
anims/down_pole = SubResource( 5 )
anims/enter_door = SubResource( 6 )
anims/falling_down = SubResource( 7 )
anims/hanging = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/jumping_up = SubResource( 10 )
anims/pogo_down = SubResource( 11 )
anims/pogo_up = SubResource( 12 )
anims/pole_idle = SubResource( 13 )
anims/run = SubResource( 14 )
anims/shoot_down_falling = SubResource( 15 )
anims/shoot_down_on_pole = SubResource( 16 )
anims/shoot_falling = SubResource( 17 )
anims/shoot_on_pole = SubResource( 18 )
anims/shoot_standing = SubResource( 19 )
anims/shoot_up_jumping = SubResource( 20 )
anims/shoot_up_on_pole = SubResource( 21 )
anims/shoot_up_standing = SubResource( 22 )
anims/up_pole = SubResource( 23 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 0.1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -15 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="ledge_det" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 24 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -14 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ledge_det"]

transform/pos = Vector2( 0, -14 )
shape = SubResource( 24 )
trigger = true
_update_shape_index = 0

[node name="Lighting" type="Sprite" parent="."]

visibility/visible = false
z/z = 3
texture = ExtResource( 46 )

[node name="fade_screen" parent="." instance=ExtResource( 47 )]

z/z = 4

[connection signal="body_enter" from="ledge_det" to="." method="_on_ledge_det_body_enter"]

[connection signal="body_exit" from="ledge_det" to="." method="_on_ledge_det_body_exit"]


